[tool.poetry]
name = "gh-webhooks"
version = "0.6.0"
description = "Typed event handling for GitHub Webhooks"
authors = ["Kevin Duff <kevinkelduff@gmail.com>"]

license = "MIT"
readme = "README.md"
homepage = "https://github.com/k2bd/gh-webhooks"
repository = "https://github.com/k2bd/gh-webhooks"
keywords = []
classifiers = [
    "Operating System :: OS Independent",
    "Development Status :: 1 - Planning",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
pydantic = {version = "1.9.0", extras = ["email"]}  # Pin to 1.9.0 - see https://github.com/koxudaxi/datamodel-code-generator/discussions/778
typing-extensions = "^4.2.0"
stringcase = "^1.2.0"

[tool.poetry.dev-dependencies]
datamodel-code-generator = {extras = ["http"], version = "^0.13.0"}
pytest = "^6.1.0"
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
mypy = "^0.931"
pytest-cov = "^3.0.0"
poethepoet = "^0.11.0"
requests = "^2.27.1"
types-requests = "^2.27.30"
pytest-asyncio = "^0.18.3"
sphinx-rtd-theme = "^1.0.0"
coverage = "^6.4.1"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.poe.tasks]
docs = "make clean html -C docs"

autoformat.sequence = [
    {cmd = "black src tests codegen"},
    {cmd = "isort src tests codegen"},
]

lint.sequence = [
    {cmd = "black --check -v src tests codegen"},
    {cmd = "isort --check -v src tests codegen"},
    {cmd = "flake8 src tests codegen"},
    {cmd = "mypy --pretty src tests codegen"},
]

test.sequence = ["unit", "integration"]

[tool.poe.tasks.unit]
sequence = [
    {cmd = "pytest -vv --cov-report xml --cov-report term --cov=gh_webhooks tests/unit"},
]

[tool.poe.tasks.integration]
sequence = [
    {shell = "pytest -vv --cov-append --cov-report xml --cov-report term --cov=gh_webhooks tests/integration"},
]

[tool.poe.tasks.codegen]
sequence = [
    {cmd = "python -m codegen"},
    "autoformat",
]

[build-system]
requires = ["setuptools", "poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
docs = ["sphinx", "sphinx_rtd_theme"]
